# regmar-mobile

backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.koyeb  docker-compose.yml  env.example  package-lock.json  package.json
backend/python/: Dockerfile  pyproject.toml
backend/python/app/: README.md  __init__.py  core.py  main.py  schemas.py  utils.py
backend/python/app/controllers/: ml.py  optimize.py
backend/python/app/ml/: __init__.py  classifier.py  ner.py  split.py  train_classifier.py  train_type_classifier.py  type_classifier.py
backend/python/app/routers/: ml.py  optimize.py
backend/python/scripts/: create_docbin_from_jsonl.py
backend/scripts/: README.md  collect_classifier_data.ts  convert_labelstudio_to_spacy_direct.py  create_classifier_csv.py  create_type_classifier_csv.py  prelabel_classifier_data.py  prelabel_type_classifier_data.py
backend/src/: index.ts
backend/src/controllers/: accounts.ts  ai.ts  auth.ts  investments.ts  linkedAccounts.ts  masterData.ts  nerFeedback.ts  optimize.ts  sync.ts  transactions.ts  txnClassifier.ts  users.ts
backend/src/db/: accountModel.ts  categoryModel.ts  connection.ts  domainModel.ts  investmentModel.ts  linkedAccountModel.ts  nerTrainingModel.ts  otpModel.ts  syncStateModel.ts  transactionModel.ts  txnClassificationTrainingModel.ts  userModel.ts
backend/src/helpers/: casParser.ts  encryption.ts  imap.ts  jwt.ts  mailer.ts  seedCategories.ts  stockMaster.ts  syncTransactions.ts  txnProcessing.ts
frontend/: App.tsx  app.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+55 files in other folders)
